--- a/po/sr_RS.po
+++ b/po/sr_RS.po
@@ -6,9 +6,9 @@
 # Мирослав Николић <miroslavnikolic@rocketmail.com>, 2011, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins Plugins\n"
+"Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-12-09 23:25+0100\n"
+"POT-Creation-Date: 2012-12-09 23:40+0100\n"
 "PO-Revision-Date: 2012-11-06 19:43+0000\n"
 "Last-Translator: Radioactiveman <thomas-lange2@gmx.de>\n"
 "Language-Team: Serbian\n"
@@ -1876,8 +1876,7 @@ msgid "%d channel"
 msgid_plural "%d channels"
 msgstr[0] "%d канал"
 msgstr[1] "%d канала"
-msgstr[2] "%d канала"
-msgstr[3] "један канал"
+msgstr[2] "%d један канал"
 
 #: src/gtkui/ui_statusbar.c:124
 #, c-format
