--- a/po/fr.po
+++ b/po/fr.po
@@ -9,7 +9,7 @@
 # Jean-Alexandre Anglès d'Auriac <jagw40k@free.fr>, 2011
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins\n"
+"Project-Id-Version: Audacious Plugins Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2013-05-31 19:01+0200\n"
 "PO-Revision-Date: 2013-05-04 21:24+0000\n"
