--- a/po/es_MX.po
+++ b/po/es_MX.po
@@ -6,7 +6,7 @@
 # Jorge A. García Sosa <jagsmd@gmail.com>, 2012-2013
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins\n"
+"Project-Id-Version: Audacious Plugins Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2013-05-31 19:01+0200\n"
 "PO-Revision-Date: 2013-05-07 05:02+0000\n"
