--- a/po/et.po
+++ b/po/et.po
@@ -7,7 +7,7 @@
 # Ivar Smolin <okul@linux.ee>, 2012
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins\n"
+"Project-Id-Version: Audacious Plugins Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2013-05-31 19:01+0200\n"
 "PO-Revision-Date: 2013-05-04 12:38+0000\n"
