--- a/po/eu.po
+++ b/po/eu.po
@@ -3,15 +3,16 @@
 # This file is distributed under the same license as the Audacious Plugins package.
 #
 # Translators:
+# asier <asier.fernandez.iribar@gmail.com>, 2013
 # Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>, 2009
 # Osoitz <oelkoro@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2013-05-31 19:01+0200\n"
-"PO-Revision-Date: 2013-05-04 12:38+0000\n"
-"Last-Translator: Radioactiveman <thomas-lange2@gmx.de>\n"
+"POT-Creation-Date: 2013-06-29 01:19+0200\n"
+"PO-Revision-Date: 2013-06-03 12:50+0000\n"
+"Last-Translator: asier <asier.fernandez.iribar@gmail.com>\n"
 "Language-Team: Basque (http://www.transifex.com/projects/p/audacious/"
 "language/eu/)\n"
 "Language: eu\n"
@@ -1576,7 +1577,7 @@ msgstr ""
 
 #: src/gtkui/columns.c:35
 msgid "Bitrate"
-msgstr ""
+msgstr "Bit-tasa:"
 
 #: src/gtkui/columns.c:277
 msgid "Choose Columns"
@@ -1616,11 +1617,11 @@ msgstr "Desgaitu"
 
 #: src/gtkui/menus.c:170
 msgid "_Open Files ..."
-msgstr ""
+msgstr "Ireki fitxategiak"
 
 #: src/gtkui/menus.c:171
 msgid "Open _URL ..."
-msgstr ""
+msgstr "Ireki BKU ..."
 
 #: src/gtkui/menus.c:172
 msgid "_Add Files ..."
@@ -1648,19 +1649,19 @@ msgstr "I_rten"
 
 #: src/gtkui/menus.c:182 src/gtkui/menus.c:296
 msgid "_Play"
-msgstr ""
+msgstr "Erreproduzitu"
 
 #: src/gtkui/menus.c:183
 msgid "Paus_e"
-msgstr ""
+msgstr "Pausatu"
 
 #: src/gtkui/menus.c:184
 msgid "_Stop"
-msgstr ""
+msgstr "Gelditu"
 
 #: src/gtkui/menus.c:185
 msgid "Pre_vious"
-msgstr ""
+msgstr "Aurrekoa"
 
 #: src/gtkui/menus.c:186
 msgid "_Next"
