--- a/po/ja.po
+++ b/po/ja.po
@@ -12,7 +12,7 @@
 # 読み専(先行量産型) <hallconnen2+transifex@gmail.com>, 2013
 msgid ""
 msgstr ""
-"Project-Id-Version: Audacious Plugins\n"
+"Project-Id-Version: Audacious Plugins Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
 "POT-Creation-Date: 2013-05-31 19:01+0200\n"
 "PO-Revision-Date: 2013-05-04 13:56+0000\n"
